# VectorLens

./: .env.example  PROGRESS.md  README.md  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/routes/: analyze.py  batch.py  benchmark.py  chat.py  search.py  upload.py
backend/app/core/: cache.py  celery_app.py  config.py  database.py  logging.py
backend/app/models/: chunk.py  document.py  schemas.py
backend/app/services/: chunker.py  document_service.py  text_extractor.py
backend/app/services/Vectordb/: base.py  chroma_store.py  factory.py  qdrant_store.py
backend/app/services/embedding/: base.py  bge_embedder.py  factory.py  mini_lm_embedder.py  ollama_embedder.py
backend/app/services/kafka/: consumer.py  producer.py  worker.py
backend/app/services/llm/: base.py  ollama_llm.py  prompts.py
backend/app/services/storage/: minio_service.py
backend/app/tasks/: document_tasks.py
backend/tests/: conftest.py  test_schemas.py  test_upload.py
data/documents/: Amr_Elsayed_Belal_AI_Resume_FINAL_(1)_f481fad6  Amr_Elsayed_Belal_RL_AI_7abc586a  Amr_Elsayed_Belal_f46b209d  Communication_Protocols_Report_a04e63d5.docx  Foundations_of_Tool_Calling_and_Chaining_01ed6db1  OptiGraph_Architecture_Plan_8809c53c  VantageNet__Real-Time_Emotion_Detection_System_e945d488  Weakly_Supervised_Deep_Learning_for_Arabic_Tweet_Sentiment_Analysis_on_Education_Reforms_Leveraging_Pre-Trained_Models_and_LLMs_With_Snorkel_(1)_85fcf6e0  aws_book_ch3_c8df2390  dexa_5a7970b0  (+7 more)
frontend/: package-lock.json
(+1 files in other folders)
